Add conf/load-env.sh to load global variables in scripts